@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2015-07-15 r68657) -- "Unsuffered Consequences"
+R Under development (unstable) (2015-07-17 r68686) -- "Unsuffered Consequences"
 Copyright (C) 2015 The R Foundation for Statistical Computing
 Platform: x86_64-unknown-linux-gnu (64-bit)
 
@@ -1040,7 +1040,12 @@ Type 'q()' to quit R.
 +     pqq <- pt(-qq, df = nu, log=TRUE)
 +     stopifnot(is.finite(pqq))
 + }
-> ##
+> ## PR#14230 -- more extreme beta cases {should no longer rely on denormalized}
+> x <- (256:512)/1024
+> P <- pbeta(x, 3, 2200, lower.tail=FALSE, log.p=TRUE)
+> stopifnot(is.finite(P), P < -600,
++ 	  -.001 < (D3P <- diff(P, diff = 3)), D3P < 0, diff(D3P) < 0)
+> ## all but the first 43 where -Inf in R <= 2.9.1
 > stopifnot(All.eq(pt(2^-30, df=10),
 +                  0.50000000036238542))
 > ## = .5+ integrate(dt, 0,2^-30, df=10, rel.tol=1e-20)
@@ -1271,9 +1276,10 @@ Type 'q()' to quit R.
 +     -4320.30273911659058550, -5186.73671481652222237, -6919.60466621638549567,
 +     -8652.47261761624876897, -10385.3405690161120427, -12118.2085204159753165,
 +     -13851.0764718158385902, -15583.9444232157018631, -17316.8123746155651368)
+> stopifnot(all.equal(pb, pbeta(x,a,b, log.p=TRUE), tol=8e-16))# seeing {1.5|1.6|2.0}e-16
 > qp <- qbeta(pb, a,b, log.p=TRUE)
 > ## x == qbeta(pbeta(x, *), *) :
-> stopifnot(qp > 0, all.equal(x, qp, tol= 1e-15))# seeing 2.4e-16
+> stopifnot(qp > 0, all.equal(x, qp, tol= 1e-15))# seeing {2.4|3.3}e-16
 > 
 > ## qbeta(), PR#15755
 > a1 <- 0.0672788; b1 <- 226390
@@ -1287,7 +1293,7 @@ Type 'q()' to quit R.
 > x <- -exp(seq(0, 14, by=2^-9))
 > ct <- system.time(qx <- qbeta(x, a,b, log.p=TRUE))[[1]]
 > pqx <- pbeta(qx, a,b, log=TRUE)
-> stopifnot(all.equal(x, pqx, tol= 2e-15)) # 3.51e-16
+> stopifnot(all.equal(x, pqx, tol= 2e-15)) # seeing {3.51|3.54}e-16
 > ## note that qx[x > -exp(2)] is too close to 1 to get full accuracy:
 > ## i2 <- x > -exp(2); all.equal(x[i2], pqx[i2], tol= 0)#-> 5.849e-12
 > if(ct > 0.5) { cat("system.time:\n"); print(ct) }# lynne(2013): 0.048
@@ -1320,7 +1326,12 @@ Type 'q()' to quit R.
 > if(ct2 > 0.020) { cat("system.time:\n"); print(ct2) }
 > ## had warnings and was much slower for R <= 3.1.0
 > 
+> ## qt(p, df= Inf, ncp)  <==> qnorm(p, m=ncp)
+> p <- (0:32)/32
+> stopifnot(all.equal(qt(p, df=Inf, ncp=5), qnorm(p, m=5)))
+> ## qt(*, df=Inf, .)  gave NaN in  R <= 3.2.1
+> 
 > 
 > cat("Time elapsed: ", proc.time() - .ptime,"\n")
-Time elapsed:  0.92 0.007 0.928 0 0 
+Time elapsed:  0.826 0.067 0.892 0 0 
 > 
